# ctci

./: README.md  run.sh
src/: 1_1.cpp  1_2.cpp  CMakeLists.txt  main.cpp
src/tasks/: 1_3.cpp  CMakeLists.txt  Chapter1.cpp  Chapter1.hpp
src/unittests/: CMakeLists.txt  Chapter1Tests.cpp  testRunner.cpp  test_1_1.cpp  test_1_2.cpp  test_1_3.cpp
